# ssss2

./: CMakeLists.txt  Main.cpp
Network/: Network.cpp  Network.h
Neuron/: Neuron.cpp  Neuron.h
